--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "MagiCreate",
+  "name": "MagiKreate",
   "version": "1.0.0",
   "author": "White_Gamer89",
   "files": [
